# wcs-c-sdk

./: CMakeLists.txt  README.md
demo/: CMakeLists.txt  Makefile  Readme.txt  test.c
src/b64/: b64.c  b64.h  urlsafe_b64.c  urlsafe_b64.h
src/base/: inifile.c  inifile.h  log.h  patchfileops.c  threadpool.c  threadpool.h
src/cJSON/: cJSON.c  cJSON.c~  cJSON.h  cJSON.h~
src/wcs/: auth_mac.c  base.c  base.h  base_io.c  conf.c  conf.h  fop.c  fop.h  http.c  http.h  io.c  io.h  macro.h  multipart_io.c  multipart_io.h  reader.c  reader.h  region.c  region.h  rs.c  rs.h  tm.c  tm.h
